syntax = "proto3";

option csharp_namespace = "Fibertest30.Api";
package fibertest30.greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc StreamHello (HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
